data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1179.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\87\80\80\80\00\01\01\6d\01\66\00\00\03"
    "\82\80\80\80\00\01\00\07\96\80\80\80\00\01\12\74"
    "\65\73\74\5f\65\78\70\6f\72\74\65\64\5f\66\75\6e"
    "\63\00\01\0a\94\80\80\80\00\01\8e\80\80\80\00\00"
    "\03\40\02\40\0c\00\0b\10\00\0c\01\0b\0b"
  )
""
)